[package]
name = "jma"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"]}
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }